Fix extra space on article pages

--- a/front/style/_layout.scss
+++ b/front/style/_layout.scss
@@ -220,6 +220,10 @@
             margin-bottom: 40px;
         }
 
+        &--bottom-60 {
+            margin-bottom: 60px;
+        }
+
         &--bottom-huge {
             margin-bottom: 80px;
         }
